--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Sign up</h1>
 
-<%= form_with model: @user, url: user_path, local: true do |f| %>
+<%= form_with model: @user, url: root_path, local: true do |f| %>
     <div class = "field">
         <%= f.label :email %><br>
         <%= f.text_field :email %>
